Add blog section with web and blockchain mode content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -15,13 +16,11 @@
     <div class="logo">PARGAT SINGH</div>
     <div class="nav-container">
       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="#"><i class="fas fa-user"></i> About</a></li>
+        <li><a href="#"><i class="fas fa-briefcase"></i> Services</a></li>
+        <li><a href="#blog"><i class="fas fa-blog"></i> Blog</a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
       </ul>
       <div class="theme-toggle-container">
         <button id="desktop-theme-toggle" class="theme-toggle" onclick="toggleTheme()">
@@ -53,6 +52,7 @@
           <li><a href="#services" onclick="toggleMenu()">Services</a></li>
           <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#testimonials" onclick="toggleMenu()">Testimonials</a></li>
+          <li><a href="#blog" onclick="toggleMenu()">Blog</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -533,6 +533,84 @@
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
   
+  <section id="blog">
+    <p class="section__text__p1">Latest Insights</p>
+    <h1 class="title">My Blog</h1>
+    <div class="blog-container">
+      <div class="web-blogs">
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-web-1.png" alt="Modern Web Development" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Modern Web Development Trends in 2023</h3>
+            <p class="blog-date">June 15, 2023</p>
+            <p class="blog-excerpt">Exploring the latest frameworks, tools, and methodologies that are shaping the future of web development.</p>
+            <a href="./blog/web-development-trends.html" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-web-2.png" alt="Responsive Design" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Mastering Responsive Design for All Devices</h3>
+            <p class="blog-date">July 22, 2023</p>
+            <p class="blog-excerpt">A comprehensive guide to creating websites that look and function perfectly across all screen sizes and devices.</p>
+            <a href="#" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-web-3.png" alt="Performance Optimization" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Web Performance Optimization Techniques</h3>
+            <p class="blog-date">August 10, 2023</p>
+            <p class="blog-excerpt">Learn how to significantly improve your website's loading speed and overall performance with these proven strategies.</p>
+            <a href="#" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="blockchain-blogs" style="display: none;">
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-blockchain-1.png" alt="Smart Contracts" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Understanding Smart Contracts: A Developer's Guide</h3>
+            <p class="blog-date">May 5, 2023</p>
+            <p class="blog-excerpt">Dive into the world of smart contracts, exploring their functionality, security considerations, and real-world applications.</p>
+            <a href="./blog/smart-contracts-guide.html" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-blockchain-2.png" alt="DeFi Development" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Building DeFi Applications: Challenges and Solutions</h3>
+            <p class="blog-date">July 3, 2023</p>
+            <p class="blog-excerpt">Explore the technical challenges and innovative solutions in developing decentralized finance applications.</p>
+            <a href="#" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+        <div class="blog-card">
+          <div class="blog-img-container">
+            <img src="./assets/blog-blockchain-3.png" alt="NFT Marketplace" class="blog-img" />
+          </div>
+          <div class="blog-content">
+            <h3 class="blog-title">Creating an NFT Marketplace: From Concept to Launch</h3>
+            <p class="blog-date">August 28, 2023</p>
+            <p class="blog-excerpt">A step-by-step guide to developing your own NFT marketplace, including smart contract integration and frontend development.</p>
+            <a href="#" class="blog-read-more">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+  </section>
+  
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
@@ -558,6 +636,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
